--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "cityprojadvisory",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-inline-import": "^2.0.6",
+    "express": "^4.16.2",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^4.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
